# 4s-PKI

./: CMakeLists.txt  LICENSE.md  README.md  TODO.md  doxy.conf
cmake/: FindLIBINIPARSER.cmake  FindLIBUI.cmake
src/: 4s-cli.c  4s-gui.c  CMakeLists.txt  base64.c  bsd-strlcpy.c  cliopt.c  cliopt.h  gui.c  gui.h  gui_strings.h  gui_tab_create.c  gui_tab_operations.c  gui_tab_rekey.c  gui_tab_unlock.c  openssl_conf.h  pki.c  pki.h  sha3.c  sha3.h  shamir.c  shamir.h  shared_secret.c  shared_secret.h  ui_ext.c  ui_ext.h  utils.c  utils.h
tests/: CMakeLists.txt  test_shamir.c  test_utils.c
